--- a/src/pages/styles/homepage.css
+++ b/src/pages/styles/homepage.css
@@ -165,11 +165,6 @@
 	line-height: 50px;
 }
 
-@media (max-width: 1200px) {
-	.homepage-first-area-left-side {
-		max-width: 50%;
-	}
-}
 
 @media (max-width: 1024px) {
 	.homepage-container {
